{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 10,
  "lineage": "5cf2b7f2-fa05-b961-7194-f4b99fd2d5b0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "niwel",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkInterfaces/welcomenic",
            "internal_domain_name_suffix": "jkskfhle0nluhmgreqznyfow4d.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "welcomeipc",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/publicIPAddresses/welcomeip",
                "subnet_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/virtualNetworks/welcomevn/subnets/welcomesn"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "welcomenic",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "welcome-rg"
          },
          "dependencies": [
            "azurerm_public_ip.piwel",
            "azurerm_resource_group.rgwel",
            "azurerm_subnet.snwel",
            "azurerm_virtual_network.vnwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkInterfaces/welcomenic|/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkSecurityGroups/nsg_welcome",
            "network_interface_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkInterfaces/welcomenic",
            "network_security_group_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkSecurityGroups/nsg_welcome"
          },
          "dependencies": [
            "azurerm_network_interface.niwel",
            "azurerm_network_security_group.nsgwel",
            "azurerm_public_ip.piwel",
            "azurerm_resource_group.rgwel",
            "azurerm_subnet.snwel",
            "azurerm_virtual_network.vnwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgwel",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkSecurityGroups/nsg_welcome",
            "location": "westus",
            "name": "nsg_welcome",
            "resource_group_name": "welcome-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rgwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule_vm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/networkSecurityGroups/nsg_welcome/securityRules/allow-http-3000-vm01",
            "name": "allow-http-3000-vm01",
            "network_security_group_name": "nsg_welcome",
            "priority": 103,
            "protocol": "*",
            "resource_group_name": "welcome-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsgwel",
            "azurerm_resource_group.rgwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "piwel",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/publicIPAddresses/welcomeip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.83.184.68",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "welcomeip",
            "resource_group_name": "welcome-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rgwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "snwel",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/28"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/virtualNetworks/welcomevn/subnets/welcomesn",
            "name": "welcomesn",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "welcome-rg",
            "virtual_network_name": "welcomevn"
          },
          "dependencies": [
            "azurerm_resource_group.rgwel",
            "azurerm_virtual_network.vnwel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnwel",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9da2a44a-d364-4357-b0d1-2432dc15d6f3",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcome-rg/providers/Microsoft.Network/virtualNetworks/welcomevn",
            "location": "westus",
            "name": "welcomevn",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "welcome-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rgwel"
          ]
        }
      ]
    }
  ]
}